@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-04T16:28:20Z",
-  "count" : 64,
-  "count_minmax" : [ 63, 64 ],
-  "count_decinc" : [ -0, +64 ],
+  "timestamp" : "2022-06-05T02:02:08Z",
+  "count" : 65,
+  "count_minmax" : [ 63, 65 ],
+  "count_decinc" : [ -0, +65 ],
   "uniques" : 8,
   "uniques_minmax" : [ 8, 8 ],
   "uniques_decinc" : [ -0, +8 ]
