@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-04T16:28:20Z",
+  "timestamp" : "2022-06-05T02:02:08Z",
   "count_outdated" : 504,
   "uniques_outdated" : 284,
-  "count" : 605,
+  "count" : 606,
   "uniques" : 314,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 64,
-      "count_minmax": [ 63, 64 ],
+      "count": 65,
+      "count_minmax": [ 63, 65 ],
       "uniques": 8,
       "uniques_minmax": [ 8, 8 ]
     }
