@@ -1,5 +1,5 @@
 {
-  "count": 101,
+  "count": 102,
   "uniques": 18,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 64,
+      "count": 65,
       "uniques": 8
     }
   ]
